--- a/WebAppUniversity/appsettings.json
+++ b/WebAppUniversity/appsettings.json
@@ -2,6 +2,14 @@
   "Data": {
     "University": {
       "ConnectionString": "Server=.\\NAIS_SQL_SERVER;Database=UniversityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "UniversityIdentity": {
+      "ConnectionString": "Server=.\\NAIS_SQL_SERVER;Database=UniversityIdentityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "JWT": {
+      "Audience": "https://localhost:44362/",
+      "Issuer": "https://localhost:44362/",
+      "KEY": "fc492ac858124be1b7791630d4ab95d5"
     }
   }
 }
