--- a/WebAppUniversity/package.json
+++ b/WebAppUniversity/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
+    "prop-types": "^15.7.2",
     "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
