adding jwt authorization

--- a/WebAppUniversity/appsettings.json
+++ b/WebAppUniversity/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    },
+    "Console": {
+      "IncludeScopes": true
+    }
+  },
   "Data": {
     "University": {
       "ConnectionString": "Server=.\\NAIS_SQL_SERVER;Database=UniversityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
